Fixed spacing around media and post previews

--- a/static/css/meta.less
+++ b/static/css/meta.less
@@ -610,7 +610,7 @@
 
 .meta-header {
     padding-bottom: unit(8px / @base-font-size-px, em);
-    margin-bottom: unit(10px / @base-font-size-px, em);
+    margin-bottom: unit(30px / @base-font-size-px, em);
     border-bottom: 1px solid @gray-50;
 }
 
